--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ts-node": "^10.9.1"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^4.2.0"
+    "@tensorflow/tfjs": "^4.2.0",
+    "@tensorflow/tfjs-node": "^4.2.0"
   }
 }
